@@ -7,10 +7,11 @@ sudo chmod a+x BeerPi_jar/*.sh
 sudo xset s off
 sudo xset s noblank
 sudo timedatectl set-ntp false
+sudo setxkbmap -option grp:switch,grp:alt_shift_toggle,grp_led:scroll us,ru
 
-for i in {1...8}
+while :
 do
-	sudo ionice -c 1 -n 0 java -jar /home/pi/BeerPi/BeerPi_jar/BeerPi.jar -ea --add-modules ALL-MODULE-PATH --add-opens java.base/java.lang=ALL-UNNAMED
+	sudo ionice -c 1 -n 0 java -Xms=1G -Xmx=2G -jar /home/pi/BeerPi/BeerPi_jar/BeerPi.jar --add-opens java.base/java.lang=ALL-UNNAMED
 
 	if [ $? != 0 ]; then
 		break
@@ -18,9 +19,6 @@ do
 done
 
 lxpanel --profile LXDE-pi
-
 sudo timedatectl set-ntp true
 sudo ntpdate -s ntp.ubuntu.com
-
-sudo setxkbmap -option grp:switch,grp:alt_shift_toggle,grp_led:scroll us,ru
 sudo pcmanfm
